# dosbox-x

./: .editorconfig  .gitattributes  .gitignore  .pages.yml  2xscale.sh  AUTHORS  BUILD.md  CHANGELOG  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CREDITS.md  ChangeLog  DOS GAMES THAT NEED A HIGHER MCB BASE SEGMENT.TXT  Doxyfile  Gemfile  INSTALL  INSTALL.md  MICROPHONE_IMPLEMENTATION_NOTES.md  Makefile.am  Makefile.in  NEWS  PATCHES-IN-DISPUTE  PULL_REQUEST_TEMPLATE.md  README  README.CMAKE.md  README.MinGW  README.SDL2.MIGRATION.MD  README.Windows  README.cmake.md  README.debugger  README.development-in-Windows  README.joystick  README.keyboard-layout-handling  README.md  README.source-code-description  README.video  README.video-debug-overlay.md  (+178 more)
include/: 8255.h  Breakpoint.h  CMakeLists.txt  DOSBoxTTF.h  DebugVariable.h  Makefile.am  Makefile.in  SDL_cdrom.h  SDL_ttf.h  avi.h  avi_writer.h  bios.h  bios_disk.h  bitmapinfoheader.h  bitop.h  build_timestamp.h  builtin.h  byteorder.h  callback.h  cheat.h  clockdomain.h  control.h  cp1250_uni.h  cp1251_uni.h  cp1252_uni.h  cp1253_uni.h  cp1254_uni.h  cp1255_uni.h  cp1256_uni.h  cp1257_uni.h  cp1258_uni.h  cp3021_uni.h  cp437_uni.h  cp453_uni.h  cp737_uni.h  cp775_uni.h  cp808_uni.h  cp850_uni.h  cp852_uni.h  cp853_uni.h  (+127 more)
include/fluidsynth/: audio.h  config_win32.h  event.h  gen.h  ladspa.h  log.h  midi.h  misc.h  mod.h  ramsfont.h  seq.h  seqbind.h  settings.h  sfont.h  shell.h  synth.h  types.h  version.h  voice.h
include/ogg/: config_types.h  ogg.h  os_types.h
include/speex/: speex_buffer.h  speex_echo.h  speex_jitter.h  speex_preprocess.h  speex_resampler.h  speexdsp_config_types.h  speexdsp_types.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  d3.txt  dosbox.cpp  dosbox.cpp.orig  dosbox.plist  iowin32.c  miniunz.c  minizip.c  mztools.c  os2res.h  os2res.rc  resource.h  save_state.cpp  save_state.h  shell.cpp  shell_cmds.cpp  winres.h  winres.rc  zip.c
src/aviwriter/: CMakeLists.txt  Makefile.am  Makefile.in  avi.h  avi_rw_iobuf.cpp  avi_rw_iobuf.h  avi_writer.cpp  avi_writer.h  guid.cpp  guid.h  ksdataformat.cpp  ksdataformat.h  riff.cpp  riff.h  riff_wav_writer.cpp  riff_wav_writer.h
src/builtin/: 132_com.cpp  25_com.cpp  28_com.cpp  4DOS_img.h  50_com.cpp  CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  append_exe.cpp  buffers_com.cpp  cdplay.cpp  cdplay.h  chkdsk_exe.cpp  copy_exe.cpp  cwsdpmi_exe.cpp  cwsdpmi_exe.cpp~  cwsdpmi_exe_pc98.cpp  debug_exe.cpp  defrag_exe.cpp  device_com.cpp  diskcopy_exe.cpp  dos32a_exe.cpp  dos4gw_exe.cpp  dosidle_exe.cpp  dosmid.cpp  dosmid.h  dsxmenu_exe_pc.cpp  dsxmenu_exe_pc98.cpp  edit_com.cpp  emsmagic.cpp  emsmagic.h  eval.cpp  eval.h  fc_exe.cpp  fcbs_com.cpp  fdisk_exe.cpp  files_com.cpp  find_exe.cpp  (+31 more)
src/cpu/: CMakeLists.txt  Makefile.am  Makefile.in  callback.cpp  core_dyn_x86.cpp  core_dynrec.cpp  core_full.cpp  core_kvm_linux.cpp  core_normal.cpp  core_normal_286.cpp  core_normal_8086.cpp  core_prefetch.cpp  core_prefetch_286.cpp  core_prefetch_8086.cpp  core_prefetch_buf.h  core_simple.cpp  cpu.cpp  dynamic_alloc_common.h  flags.cpp  instructions.h  lazyflags.h  mmx.cpp  modrm.cpp  modrm.h  paging.cpp
src/debug/: Breakpoint.cpp  DebugVariable.cpp  Makefile.am  Makefile.in  cheat.cpp  debug.cpp  debug_disasm.cpp  debug_gui.cpp  debug_inc.h  debug_server.cpp  debug_server_win32.cpp  debug_win32.cpp  disasm_tables.h
src/dos/: CMakeLists.txt  Makefile.am  Makefile.in  cdrom.cpp  cdrom.h  cdrom_aspi_win32.cpp  cdrom_complete.cpp  cdrom_image.cpp  cdrom_ioctl_linux.cpp  cdrom_ioctl_os2.cpp  cdrom_ioctl_win32.cpp  char512.h  crc32.h  dev_con.h  dos.cpp  dos_classes.cpp  dos_codepages.h  dos_devices.cpp  dos_execute.cpp  dos_files.cpp  dos_ioctl.cpp  dos_keyboard_layout.cpp  dos_keyboard_layout_data.h  dos_memory.cpp  dos_misc.cpp  dos_mscdex.cpp  dos_network.h  dos_network2.h  dos_programs.cpp  dos_programs.cpp.orig  dos_tables.cpp  drive_cache.cpp  drive_fat.cpp  drive_iso.cpp  drive_local.cpp  drive_overlay.cpp  drive_physfs.cpp  drive_virtual.cpp  drives.cpp  drives.h  (+8 more)
src/fpu/: CMakeLists.txt  Makefile.am  Makefile.in  fpu.cpp  fpu_instructions.h  fpu_instructions_longdouble.h  fpu_instructions_x86.h
src/gamelink/: Makefile.am  README.md  gamelink.cpp  gamelink.h  gamelink_term.cpp  scancodes_windows.h
src/gui/: BReverbModel.cpp  CMakeLists.txt  FileStream.cpp  FreeverbModel.h  LA32Ramp.cpp  Makefile.am  Makefile.in  Part.cpp  Part.h  Partial.cpp  Partial.h  PartialManager.cpp  PartialManager.h  Poly.h  SDL_ttf.c  ScalingEffect.cpp  ScalingEffect.h  Synth.cpp  Synth.h  TVP.h  avi_rw_iobuf.cpp  avi_writer.c  avi_writer.cpp  bitop.cpp  d3d_components.h  direct3d.cpp  direct3d.h  display2.cpp  dosbox.cga640.bmp.h  dosbox.vga16.bmp.h  dosbox_logo.h  dosbox_splash.h  guid.c  guid.cpp  hq2x_d3d.cpp  hq2x_d3d.h  menu.cpp  menu.cpp.orig  menu_callback.cpp  menu_macos.mm  (+39 more)
src/hardware/: 8255.cpp  CMakeLists.txt  Makefile.am  Makefile.in  adlib.cpp  adlib.h  cmos.cpp  cqm.c  cqm.h  dbopl.cpp  dbopl.h  disney.cpp  dma.cpp  dongle.cpp  floppy.cpp  gameblaster.cpp  glide.cpp  gus.cpp  hardopl.cpp  hardopl.h  hardware.cpp  ide.cpp  imfc.cpp  imfc_rom.c  innova.cpp  iohandler.cpp  ipx.cpp  ipxserver.cpp  joystick.cpp  keyboard.cpp  memory.cpp  mic_input_win32.cpp  mic_input_win32.h  mixer.cpp  mpu401.cpp  ne2000.cpp  nukedopl.cpp  nukedopl.h  nukedopl_wf_rom.h  opl.cpp  (+46 more)
src/ints/: CMakeLists.txt  Makefile.am  Makefile.in  bios.cpp  bios_disk.cpp  bios_keyboard.cpp  bios_memdisk.cpp  bios_vhd.cpp  biosk.cpp  ems.cpp  int10.cpp  int10.h  int10_char.cpp  int10_memory.cpp  int10_misc.cpp  int10_modes.cpp  int10_pal.cpp  int10_put_pixel.cpp  int10_vesa.cpp  int10_video_state.cpp  int10_vptable.cpp  int_dosv.cpp  mouse.cpp  pc98_lio.cpp  qcow2_disk.cpp  xms.cpp  xms.h
src/libs/: CMakeLists.txt  Makefile.am  Makefile.in
src/misc/: CMakeLists.txt  Makefile.am  Makefile.in  clipboard.cpp  cross.cpp  ethernet.cpp  ethernet_ethnet.cpp  ethernet_ethnet.h  ethernet_nothing.cpp  ethernet_nothing.h  ethernet_pcap.cpp  ethernet_pcap.h  (+13 more)
(+7389 files in other folders)
